crates/apollo-compiler/test_data/diagnostics/0021_union_definition_with_duplicate_members.txt
Error: duplicate definitions for the `Photo` member of union type `SearchResult`
   ╭─[0021_union_definition_with_duplicate_members.graphql:5:30]
   │
 5 │ union SearchResult = Photo | Photo
   │                      ──┬──   ──┬──  
   │                        ╰──────────── previous definition of `Photo` here
   │                                │    
   │                                ╰──── `Photo` redefined here
───╯

